--- a/style.css
+++ b/style.css
@@ -23,8 +23,18 @@ header {
   color: orange;
 }
 
+.maincontent {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
 .sidebutton {
-  background-color: #ee0000;
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  margin-top: 20px;
+  margin-left: -12px;
+  background-color: orange;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
