--- a/style.css
+++ b/style.css
@@ -33,9 +33,23 @@ header {
   height: 30px;
   width: 30px;
   margin-top: 20px;
-  margin-left: -12px;
+  margin-left: -13px;
   background-color: orange;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+}
+
+.sidebutton img {
+  height: 30px;
+  width: 30px;
+  margin-left: 2px;
+}
+
+.sidebutton ul {
+  display: none;
+}
+
+.sidenbutton a:hover {
+
 }
