--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ header {
 }
 
 .sidebutton nav {
-  margin-top: -50px;
-  margin-left: -14px;
+  margin-top: -14px;
+  margin-left: -35px;
 }
 
 .sidebutton ul li {
@@ -74,14 +74,17 @@ ul li a {
 a {
   text-decoration: none;
 }
-
+/*
 .sidebutton:hover ul li {
   display: block;
-  transition: 4s ease-in-out;
 }
-
+*/
 .sidebutton ul li:hover {
   background-color: #d74600;
+}
+
+.sidebutton:hover img {
+  display: none;
 }
 
 .mainfooter {
@@ -99,4 +102,42 @@ a {
   width: 92%;
   margin: 10px auto;
   color: #FFF;
+}
+
+.sidebutton:hover ul li {
+  display: block;
+    -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 0.5s; /* Firefox < 16 */
+        -ms-animation: fadein 0.5s; /* Internet Explorer */
+         -o-animation: fadein 0.5s; /* Opera < 12.1 */
+            animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
